Bug 1415571: Fix inline export numbers for globals; r=luke

MozReview-Commit-ID: 4vqKAh4fUyb